Replace blurred background with gradients to fix cross-browser compatibility.

--- a/WebContent/styles/stylesheet.css
+++ b/WebContent/styles/stylesheet.css
@@ -1,20 +1,18 @@
 body {
-	background: url('../images/blur-bg.jpg');
-	background-repeat: no-repeat;
-    background-attachment: fixed;
-	content: '';
-	z-index: -100;
 	width: 100%;
-	height: 100%;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	-webkit-filter: blur(5px);
-	-moz-filter: blur(5px);
-	-o-filter: blur(5px);
-	-ms-filter: blur(5px);
-	filter: blur(5px);
+	height: 100%;	
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, #6EC2E0),
+		color-stop(1, #2991BA)
+	);
+	background-image: -o-linear-gradient(bottom, #6EC2E0 0%, #2991BA 100%);
+	background-image: -moz-linear-gradient(bottom, #6EC2E0 0%, #2991BA 100%);
+	background-image: -webkit-linear-gradient(bottom, #6EC2E0 0%, #2991BA 100%);
+	background-image: -ms-linear-gradient(bottom, #6EC2E0 0%, #2991BA 100%);
+	background-image: linear-gradient(to bottom, #6EC2E0 0%, #2991BA 100%);
 }
 
 header nav {
